--- a/layouts/404.html
+++ b/layouts/404.html
@@ -15,11 +15,11 @@
         <div class="container">
 
           <div class="section-image">
-            <img src="/uploads/images/404.png" alt="{{ i18n " about" | title }}" />
+            <img src="/uploads/images/404.png" alt="{{ i18n "title404" }}" />
           </div>
           <div class="rich-text text-align--center">
-            <h2>{{.Title}}</h2>
-            <p>{{.Content}}</p>
+            <h2>{{ i18n "title404" | title }}</h2>
+            <p>{{ i18n "content404"  }}</p>
             <a href="/" class="btn">{{ i18n "home" | title }}</a>
           </div>
         </div>
