feat: fix format on html pages

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
-<html
-  lang="{{ with .Site.Language.Params.locale }}
-    {{ . }}
-  {{ else }}
-    {{ .Site.LanguageCode }}
-  {{ end }}"
-  class="{{ if .IsHome }}home-page{{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq
-    (getenv "NODE_ENV" ) "development"
-  }}
+<html lang=" {{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}" class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get "rootClass" }} {{ .Params.rootClass }} {{ if eq (getenv "NODE_ENV") "development" }}grid-debug{{ end }} no-js">
 
-    grid-debug
-  {{ end }}
-   no-js"
->
   {{ partial "head.html" . }}
 
 
