feat: using minify by Hugo and refactor folders

--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -28,7 +28,7 @@
 @import 'pages/home';
 
 // 7. Partials-specific styles
-@import 'partials/blog', 'partials/benefits';
+@import 'partials/blog';
 
 // 8. Themes
 @import 'themes/dark', 'themes/print';
