--- a/assets/stylesheets/base/_fonts.scss
+++ b/assets/stylesheets/base/_fonts.scss
@@ -4,28 +4,28 @@
 
 /* Arvo */
 @font-face {
-  src: local('Arvo'), url('~uploads/fonts/arvo/Arvo-Regular.ttf') format('ttf');
+  src: local('Arvo'), url('~fonts/arvo/Arvo-Regular.ttf') format('ttf');
   font-style: normal;
   font-weight: 400;
   font-family: Arvo, serif;
 }
 
 @font-face {
-  src: local('Arvo Italic'), url('~uploads/fonts/arvo/Arvo-Italic.ttf') format('ttf');
+  src: local('Arvo Italic'), url('~fonts/arvo/Arvo-Italic.ttf') format('ttf');
   font-style: italic;
   font-weight: 400;
   font-family: Arvo, serif;
 }
 
 @font-face {
-  src: local('Arvo Bold'), url('~uploads/fonts/arvo/Arvo-Bold.ttf') format('ttf');
+  src: local('Arvo Bold'), url('~fonts/arvo/Arvo-Bold.ttf') format('ttf');
   font-style: normal;
   font-weight: 700;
   font-family: Arvo, serif;
 }
 
 @font-face {
-  src: local('Arvo BoldItalic'), url('~uploads/fonts/arvo/Arvo-BoldItalic.ttf') format('ttf');
+  src: local('Arvo BoldItalic'), url('~fonts/arvo/Arvo-BoldItalic.ttf') format('ttf');
   font-style: italic;
   font-weight: 700;
   font-family: Arvo, serif;
@@ -33,35 +33,35 @@
 
 /* Roboto */
 @font-face {
-  src: local('Roboto'), url('~uploads/fonts/Roboto/Roboto-Regular.ttf') format('ttf');
+  src: local('Roboto'), url('~fonts/Roboto/Roboto-Regular.ttf') format('ttf');
   font-style: normal;
   font-weight: 400;
   font-family: Roboto;
 }
 
 @font-face {
-  src: local('Roboto Italic'), url('~uploads/fonts/Roboto/Roboto-Italic.ttf') format('ttf');
+  src: local('Roboto Italic'), url('~fonts/Roboto/Roboto-Italic.ttf') format('ttf');
   font-style: italic;
   font-weight: 400;
   font-family: Roboto;
 }
 
 @font-face {
-  src: local('Roboto Bold'), url('~uploads/fonts/Roboto/Roboto-Bold.ttf') format('ttf');
+  src: local('Roboto Bold'), url('~fonts/Roboto/Roboto-Bold.ttf') format('ttf');
   font-style: normal;
   font-weight: 700;
   font-family: Roboto;
 }
 
 @font-face {
-  src: local('Roboto BoldItalic'), url('~uploads/fonts/Roboto/Roboto-BoldItalic.ttf') format('ttf');
+  src: local('Roboto BoldItalic'), url('~fonts/Roboto/Roboto-BoldItalic.ttf') format('ttf');
   font-style: italic;
   font-weight: 700;
   font-family: Roboto;
 }
 
 @font-face {
-  src: local('Roboto Black'), url('~uploads/fonts/Roboto/Roboto-Bold.ttf') format('ttf');
+  src: local('Roboto Black'), url('~fonts/Roboto/Roboto-Bold.ttf') format('ttf');
   font-style: normal;
   font-weight: 900;
   font-family: Roboto;
