--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,3 +1,3 @@
-{{ $js := resources.Get "scripts/index.js" }}
+{{ $js := resources.Get "/scripts/index.js" | js.Build }}
 {{ $secureJS := $js | js.Build | resources.Minify | resources.Fingerprint "sha512" }}
 <script type="text/javascript" src="{{ $secureJS.RelPermalink }}" integrity="{{ $secureJS.Data.Integrity }}"></script>
