--- a/assets/stylesheets/layout/_main.scss
+++ b/assets/stylesheets/layout/_main.scss
@@ -58,7 +58,7 @@ main,
   }
 }
 
-.404 > section > .container {
+.info-page > section > .container {
   padding-top: to-em(32px);
   padding-bottom: to-em(32px);
 
