--- a/layouts/404.html
+++ b/layouts/404.html
@@ -11,7 +11,7 @@
     {{ partial "header.html" . }}
 
 
-    <main role="main" id="conteudo" class="404">
+    <main role="main" id="conteudo" class="info-page">
       <section class="image-with-text">
         <div class="container">
 
