--- a/assets/stylesheets/layout/_form.scss
+++ b/assets/stylesheets/layout/_form.scss
@@ -1,10 +1,10 @@
 /* FORMS
-============================================================================ */
+  ============================================================================ */
 
 /**
- * Property compatibility table for form widgets
- * @see https://developer.mozilla.org/en-US/docs/Property_compatibility_table_for_form_widgets
- */
+  * Property compatibility table for form widgets
+  * @see https://developer.mozilla.org/en-US/docs/Property_compatibility_table_for_form_widgets
+*/
 
 form {
   margin: 0;
@@ -16,45 +16,79 @@ fieldset {
 
   padding: 0;
   margin: 0;
+
   border: 0;
 }
 
-// fieldset fieldset {
-// }
-
 /**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- * 4. to override default firefox style
- */
-fieldset > legend, /* 4 */
+  * 1. Correct the text wrapping in Edge and IE.
+  * 2. Correct the color inheritance from `fieldset` elements in IE.
+  * 3. Remove the padding so developers are not caught out when they zero out
+  *    `fieldset` elements in all browsers.
+  * 4. to override default firefox style
+  */
+fieldset > legend,
 legend {
-  display: table; /* 1 */
+  display: table;
 
-  max-width: 100%; /* 1 */
+  max-width: 100%;
 
-  padding: 0; /* 3 */
+  padding: 0;
 
-  font-weight: font-weights('extrabold');
+  font-weight: bolder;
 
-  white-space: normal; /* 1 */
+  white-space: normal;
 
-  color: inherit; /* 2 */
-  box-sizing: border-box; /* 1 */
+  color: inherit;
+
+  box-sizing: border-box;
 }
 
+.label,
 label {
-  padding: 0;
-  margin: 0;
-  font-size: small;
+  display: block;
 
-  line-height: inherit;
+  margin-bottom: to-rem(4px);
+
+  font-size: to-em(12px);
+  line-height: to-rem(20px);
+
   cursor: pointer;
 
-  // &:focus-within {
-  // }
+  color: palette('gray');
+
+  .tooltip {
+    margin-left: 8px;
+  }
+}
+
+.validation {
+  margin: 0;
+  margin-top: 8px;
+
+  font-size: to-em(12px);
+  line-height: to-rem(16px);
+}
+
+.validation--success > span,
+.validation--success {
+  color: palette('label', 'success');
+}
+
+.validation--warning > span,
+.validation--warning {
+  color: palette('label', 'warning');
+}
+
+.validation--error > span,
+.validation--error {
+  color: palette('label', 'danger');
+}
+
+.required {
+  font-weight: bold;
+
+  color: palette('label', 'danger');
 }
 
 label * {
@@ -62,91 +96,70 @@ label * {
 }
 
 /* pragraphs inside forms
----------------------------------------------------------------------------- */
-// form p {
-// }
-
+  ---------------------------------------------------------------------------- */
 form br {
   clear: both;
 }
 
 /* common rules
- * @see https://github.com/jonathantneal/sanitize.css/issues/115#issue-178563944
----------------------------------------------------------------------------- */
+  * @see https://github.com/jonathantneal/sanitize.css/issues/115#issue-178563944
+  ---------------------------------------------------------------------------- */
 
 /**
- * 1. Change the font styles in all browsers (opinionated).
- * 2. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
- * 3. Address inconsistent `text-transform` inheritance for `button` and `select`.
- * 4. Allow setting the same size for all form fields.
- * 5. Add a focus outline for some fields only (opinionated).
- * 6. Set the focus outline to be just around the field border.
- */
+  * 1. Change the font styles in all browsers (opinionated).
+  * 2. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
+  * 3. Address inconsistent `text-transform` inheritance for `button` and `select`.
+  * 4. Allow setting the same size for all form fields.
+  * 5. Add a focus outline for some fields only (opinionated).
+  * 6. Set the focus outline to be just around the field border.
+  */
 %os-element-reset {
   display: inline-block;
-  padding: 1px; /* 2 */ // stylelint-disable-next-line property-units
+
+  padding: 1px;
   margin: 0;
 
   overflow: visible;
 
-  font-size: inherit; /* 1 */
-  line-height: inherit; /* 1 */
-  font-family: inherit; /* 1 */
-  -webkit-font-smoothing: inherit; // stylelint-disable-next-line no-vendor-prefixes
+  font-size: inherit;
+  line-height: inherit;
+  font-family: inherit;
+  -webkit-font-smoothing: inherit;
   letter-spacing: inherit;
+
   text-align: inherit;
-  text-transform: inherit; /* 3 */
-
+  text-transform: inherit;
   white-space: normal;
-
   vertical-align: top;
+
   color: inherit;
 
   border-width: $stroke;
-
   border-style: solid;
-
   border-color: palette('border');
-  border-radius: $rounded-corner;
+  border-radius: $rounded-corner-form;
 
   outline: 0;
-  box-sizing: border-box; /* 4 */
 
-  // &:hover {
-  // }
+  box-sizing: border-box;
 
   &:focus {
-    outline: 1px dotted palette('black'); /* 5 */
-    outline-offset: 0; /* 6 */
+    outline: 1px dotted palette('black');
+    outline-offset: 0;
   }
-}
-
-/* stylelint-disable selector-pseudo-class-no-unknown */
-:disabled,
-:readonly {
-  color: palette('disabled', 'foreground');
-  background: palette('disabled', 'background');
 }
 
 :disabled {
   cursor: not-allowed;
+
+  color: palette('disabled', 'foreground');
+
+  background: palette('disabled', 'background');
 }
-
-:readonly {
-  /* stylelint-disable-line */
-  cursor: default;
-}
-/* stylelint-enable selector-pseudo-class-no-unknown */
-
-// :enabled {
-// }
-
-// :optional {
-// }
 
 /**
- * Correct the text style of placeholders
- */
+  * Correct the text style of placeholders
+  */
 
 @mixin placeholder {
   color: palette('placeholder');
@@ -166,26 +179,6 @@ form br {
   @include placeholder--focus;
 }
 
-/* complex inputs
-============================================================================ */
-// [type='date'] {
-// }
-
-// [type='month'] {
-// }
-
-// [type='week'] {
-// }
-
-// [type='time'] {
-// }
-
-// [type='datetime-local'] {
-// }
-
-/* impossible inputs
-============================================================================ */
-
 [type='file'],
 [type='color'],
 [type='image'] {
@@ -194,92 +187,91 @@ form br {
   vertical-align: middle;
 
   cursor: pointer;
+
   border: 0;
 }
 
 /**
- * Consistent display mode in Firefox when image field is empty.
- */
+  * Consistent display mode in Firefox when image field is empty.
+  */
 
 [type='image'] {
   display: inline-block;
 }
 
 /**
- * Consistent background color on Chrome.
- */
+  * Consistent background color on Chrome.
+  */
 [type='color'] {
   background-color: palette('white');
 }
 
 /**
- * Remove the inside button border in Chrome.
- */
+  * Remove the inside button border in Chrome.
+  */
 ::-webkit-color-swatch {
   border: 0;
 }
 
 /**
- * Remove the inside button border in Firefox.
- */
+  * Remove the inside button border in Firefox.
+  */
 ::-moz-color-swatch {
   border: 0;
 }
 
 /**
- * Remove the inside button padding in Chrome.
- */
+  * Remove the inside button padding in Chrome.
+  */
 ::-webkit-color-swatch-wrapper {
   padding: 0;
 }
 
 /**
- * Remove the inside button padding in Firefox.
- */
+  * Remove the inside button padding in Firefox.
+  */
 ::-moz-color-swatch-wrapper {
   padding: 0;
 }
 
+//
+
 /**
- * 1. Consistent background color on Edge and IE.
- * 2. override Opera margin and padding
- */
+  * 1. Consistent background color on Edge and IE.
+  * 2. override Opera margin and padding
+*/
+
 [type='file'] {
   height: 2em;
-
   min-width: 250px;
-  padding: 0 !important; /* 2 */ /* stylelint-disable-line */
 
-  margin: 0; /* 2 */
+  padding: 0;
+  // sass-lint:disable-line no-important
+  margin: 0;
 
   font-family: inherit;
-  text-align: start !important; /* stylelint-disable-line */
 
+  text-align: start; // sass-lint:disable-line no-important
   white-space: nowrap;
 
   cursor: default;
 
-  background-color: transparent; /* 1 */
-  border-style: none !important; /* stylelint-disable-line */
-  box-align: baseline; /* stylelint-disable-line */
-  appearance: none; /* stylelint-disable-line */
+  background-color: transparent;
 
-  appearance: none; /* stylelint-disable-line */
+  border-style: none; // sass-lint:disable-line no-important
 
-  appearance: normal; //stylelint-disable-next-line indentation
-  -moz-binding: none; /* stylelint-disable-line */
+  appearance: normal; //sass-lint:disable-line indentation
+
 }
-
-// [type='file'][multiple] {
-// }
 
 [type='file'] > [type='text'] {
   height: inherit;
 
   font-size: inherit;
-
   letter-spacing: inherit;
+
   color: inherit;
+
   background-color: inherit;
 
   border-color: inherit;
@@ -287,12 +279,12 @@ form br {
 
 [type='file'] > [type='button'] {
   height: inherit;
+
   padding: 0;
 
   font-size: inherit;
 
   white-space: normal;
-  box-align: center; /* stylelint-disable-line */
 
   box-sizing: content-box;
 
@@ -300,23 +292,22 @@ form br {
 }
 
 /**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Consistent background color for all browsers (same than above).
- * 3. Consistent style, width and color between all fields (same than above).
- * 4. Change font properties to `inherit` in Safari.
- */
+  * 1. Correct the inability to style clickable types in iOS and Safari.
+  * 2. Consistent background color for all browsers (same than above).
+  * 3. Consistent style, width and color between all fields (same than above).
+  * 4. Change font properties to `inherit` in Safari.
+  */
 
 ::-webkit-file-upload-button {
-  font: inherit; /* 4 */
+  font: inherit;
+
   cursor: pointer;
 
-  background-color: palette('button'); /* 2 */
-  border-width: 1px; /* 3 */
+  background-color: palette('button');
 
-  border-style: solid; /* 3 */
-
-  border-color: palette('border'); /* 3 */
-  appearance: button; /* 1 */ // stylelint-disable-next-line no-vendor-prefixes
+  border-width: 1px;
+  border-style: solid;
+  border-color: palette('border');
 
   &:hover {
     background-color: palette('button', 'focus');
@@ -324,8 +315,8 @@ form br {
 }
 
 /**
- * Add a focus outline for color field (Chrome) and file selector field (Chrome & Safari) (same than above).
- */
+  Add a focus outline for color field (Chrome) and file selector field (Chrome & Safari) (same than above).
+*/
 
 :focus::-webkit-color-swatch,
 :focus::-webkit-file-upload-button {
@@ -333,13 +324,13 @@ form br {
 }
 
 /**
- * Consistent style, width and color between all fields (same than above).
- */
+  Consistent style, width and color between all fields (same than above).
+*/
 
 ::-ms-browse {
-  border-width: 1px; /* 1 */
-  border-style: solid; /* 1 */
-  border-color: palette('border'); /* 1 */
+  border-width: 1px;
+  border-style: solid;
+  border-color: palette('border');
 
   &:hover {
     background-color: palette('button', 'focus');
@@ -347,49 +338,23 @@ form br {
 }
 
 /**
- * Add a focus outline for file selector field in Edge and IE (same than above).
- */
+  * Add a focus outline for file selector field in Edge and IE (same than above).
+  */
 
 :focus::-ms-browse {
   outline: 1px dotted palette('black');
 }
 
-// /* ALERTS and FORMS */
-// .success {
-// }
-
-// :valid {
-// }
-
-// :in-range {
-// }
-
-// :required:valid {
-// }
-
-// .warning {
-// }
+/* ALERTS and FORMS */
 
 [required],
 :required {
   box-shadow: none;
 }
 
-// .alert {
-// }
-
-// :out-of-range {
-// }
-
-// [type='submit']:-moz-submit-invalid {
-// }
-
-// x-moz-errormessage {
-// }
-
 /**
- * Remove the focus outline in Firefox to only keep the original effect.
- */
+  * Remove the focus outline in Firefox to only keep the original effect.
+  */
 [type='range']:-moz-focusring,
 [type='checkbox']:-moz-focusring,
 [type='radio']:-moz-focusring {
