--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -13,7 +13,7 @@
 
     <main role="main" id="conteudo" class="internal-page">
       <section class="section">
-        <div class="container">
+        <div class="container container--narrow ">
           <div>
             <div class="rich-text">
               <h2 class="title">{{.Title}}</h2>
