fix: thumb and main photo on blog

--- a/assets/stylesheets/abstracts/_config.scss
+++ b/assets/stylesheets/abstracts/_config.scss
@@ -274,7 +274,7 @@ $palette: (
 /// @todo Customize it to match your design.
 /// @type number
 $rounded-corner: 8px !default;
-$rounded-corner-form: 4px !default;
+$rounded-corner-s: 4px !default;
 
 /// border default width
 /// @todo Customize it to match your design.
