--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -23,7 +23,7 @@
             <p>{{.Content}}</p>
             <a href="/" class="btn">{{ i18n "home" | title }}</a>
           </div>
-        </div>>
+        </div>
   </div>
   </section>
   </main>
