--- a/assets/stylesheets/layout/_form.scss
+++ b/assets/stylesheets/layout/_form.scss
@@ -137,7 +137,7 @@ form br {
   border-width: $stroke;
   border-style: solid;
   border-color: palette('border');
-  border-radius: $rounded-corner-form;
+  border-radius: $rounded-corner-s;
 
   outline: 0;
 
