--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -22,7 +22,7 @@
 // 5. Components
 @import 'components/h-entry', 'components/figure', 'components/button', 'components/checkbox-and-radio',
   'components/output', 'components/progress', 'components/select', 'components/slider', 'components/text-field',
-  'components/carousel', 'components/logo', 'components/embed-container', 'components/card', 'components/breadcrumbs';
+  'components/carousel', 'components/logo', 'components/embed-container', 'components/card', 'components/author', 'components/breadcrumbs';
 
 // 6. Page-specific styles
 @import 'pages/home';
