--- a/assets/stylesheets/layout/_main.scss
+++ b/assets/stylesheets/layout/_main.scss
@@ -76,10 +76,10 @@ main,
 }
 
 .internal-page {
-  padding: 32px 0;
+  padding: to-rem(16px) 0;
 
   @media screen and (min-width: breakpoint('tablet__landscape')) {
-    padding: 80px 0;
+    padding: to-rem(48px) 0;
   }
 }
 
