--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -42,25 +42,70 @@
                   {{ end }}
                 {{ end }}
 
-                  <div class="post__info">
-                    {{ .Date.Format "2" }}
-                    {{ .Date.Format "January" }}
-                    <div class="rich-text">
-                      <a href="/blog/{{ .Params.slug }}" class="text-decor--none">
-                        <h2>
-                          {{ .Title }}
-                        </h2>
-                      </a>
-                      <p>Postado por:</p>
-                      {{ range .Params.authors }}
-                        {{ range where $.Site.Pages "Params.slug" .author }}
-                          <p>{{ .Title }}</p>
-                        {{ end }}
-                      {{ end }}
+                <div class="post__header">
+                  <div class="post-title">
+                    <a href="/blog/{{ .Params.slug }}" class="text-decor--none">
+                      <h2>
+                        {{ .Title }}
+                      </h2>
+                    </a>
 
-                      {{ .Content }}
-                    </div>
+                    {{if .Params.subtitle }}
+                    <p class="subtitle">
+                      {{.Params.subtitle}}
+                    </p>
+                    {{ end }}
                   </div>
+
+                  <div>
+                    {{ range .Params.authors }}
+                    {{ range where $.Site.Pages "Params.slug" .author }}
+                    <div class="author author--medium">
+                      <div>
+                        <a href="/autor/{{ .Params.slug}}"><img src="{{ .Params.avatar }}" alt="{{ .Params.alt }}" /></a>
+                      </div>
+                      <div class="author__info">
+                        {{if .Title}}
+                        <p>{{i18n "by" }}:</p>
+                        <p><a href="/autor/{{ .Params.slug}}">{{ .Title }}</a></p>
+                        {{ end }}
+                        {{if .Data }}
+                        {{ end }}
+                      </div>
+                    </div>
+                    {{ end }}
+                    {{ end }}
+                  </div>
+                </div>
+
+                <div class="post__body">
+
+                  {{ if .Params.summary }}
+
+                  <div class="rich-text">
+                    {{ .Params.summary }}
+
+                    <button>{{ i18n "readMore" }}</button>
+
+                  </div>
+
+                  {{ else }}
+                    <div class="rich-text">
+                      {{.Content }}
+                    </div>
+                  {{ end }}
+
+                  {{ if .Params.tags }}
+                  <div class="tags-wrap">
+                    <h2 class="heading-4">Tags:</h2>
+                    <ul class="tags">
+                      {{ range .Params.tags }}
+                      <li>{{ . }}</li>
+                      {{ end}}
+                    </ul>
+                  </div>
+                  {{ end }}
+                </div>
 
                 </div>
               {{ end }}
