--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -27,9 +27,9 @@
 
               <div class="post__header">
                 <div class="post-title">
-                    <h2>
+                    <h1 class="heading-2">
                       {{ .Title }}
-                    </h2>
+                    </h1>
 
                   {{if .Params.subtitle }}
                   <p class="subtitle">
